LIST OF CHANGES

 - set explicit dist to precise in travis yml

release 86.4
 - reference find role: remove unused 'subset' attribute and
   previously deprecated 'single_ref_found' method 
 - increate http tmeout for event notification
 - run tracking server on two ports - one accepting http traffic, another
   one https only; the same set of URLs on both ports
 - tracking web GUI link to request LIMs page now changed to point to
   a more useful lane page; request id will not be available if XML
   LIMs feeds are discontinued
 - link to auth script residing in the same virtual host 
 - sensor-related code removed
 - mkfastq option added to make a samplesheet suitable for 10x mkfastq

release 86.3
 - event notification - do LIMs notification first; if it fails and is run
     multiple times as a consequence, users are not spammed

release 86.2
 - event notification:
     use faster ml warehouse st::api::lims driver (ml_warehouse_fc_cache)
     find templates directory relative to the running script bin
     fix npg tracking server url in reports' text
     filter out undefined email addresses
     bug fixes
 - remove models for db tables that are due to be dropped
 - update apache conf so server run with 1 thread/child w/mpm_worker_module
   Config::IniFiles used by ClearPress::util does not seem to be thread safe
 - replace image generation/manipulation routines by a stub
   returning a simple static image (these routines are used
   in npg_qc in web pages that are no longer used).
 - st::api::lims helper over boolean values for a pool fixed to work
   correctly for compositions

release 86.1
 - update models, droping cost code and cost group
 - updating templates to remove broken R&D watermark based on cost_code
 - deleting fixtures and tests for cost code and cost group
 - under modperl information about request url is not available in
   env. variables; now getting it directy from the CGI module
 - when possible, any subsequent requests should go to the server