@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 48;
+use Test::More tests => 49;
 use Test::Exception;
 use File::Spec::Functions qw(catfile);
 use Cwd qw(cwd);
@@ -192,12 +192,13 @@ use_ok('npg_tracking::data::reference::find');
 
 {
   my $ruser = Moose::Meta::Class->create_anon_class(
-      roles => [qw/npg_tracking::data::transcriptome::find/])
+      roles => [qw/npg_tracking::data::reference::find/])
       ->new_object({ repository => $transcriptome_repos });
-  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome)])),'Homo_sapiens 1000Genomes_hs37d5 ensembl_74_transcriptome','transcriptome ref genome parsing ok with correct format'); 
-  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 ; ensembl_74_transcriptome)])),q[],'transcriptome ref genome parsing ok - returns empty with incorrect delimiter'); 
+  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome)])),'Homo_sapiens 1000Genomes_hs37d5 ensembl_74_transcriptome +','transcriptome ref genome parsing ok with correct format 1/2'); 
+  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 * ensembl_74_transcriptome)])),'Homo_sapiens 1000Genomes_hs37d5 ensembl_74_transcriptome *','transcriptome ref genome parsing ok with correct format 2/2'); 
+  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + )])),q[Homo_sapiens 1000Genomes_hs37d5],'transcriptome ref genome parsing ok - returns genome and strain only with missing transcriptome version'); 
   is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 ensembl_74_transcriptome)])),q[],'transcriptome ref genome parsing ok - returns empty with missing delimiter'); 
-  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome])),q[],'transcriptome ref genome parsing ok - returns empty with missing bracket'); 
+  is(join(q[ ],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome])),q[],'transcriptome ref genome parsing ok - returns empty with missing bracket');
 
   $ruser = Moose::Meta::Class->create_anon_class(
           roles => [qw/npg_tracking::data::reference::find/])
